# braincraft

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  logging.ini  pyproject.toml
.github/workflows/: publish.yml  tests.yml
braincraft/: __init__.py  ignorefile.py  retry.py
tests/: __init__.py  test_ignorefile.py  test_retry.py
